--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -84,3 +84,12 @@ body {
   --br-mini: 15px;
   --br-10xl-5: 29.5px;
 }
+footer{
+  --footerHeight:"133px";
+  --footerMaxWidth:"unset";
+  --footerPosition:"absolute";
+  --footerTop:"942px";
+  --footerLeft:"0px";
+  --footerMaxHeight:"100%";
+  --footerJustifyContent:"stretch";
+}
