--- a/frontend/src/pages/MytutorialsL.module.css
+++ b/frontend/src/pages/MytutorialsL.module.css
@@ -143,13 +143,14 @@
   left: 2px;
   font-size: var(--font-size-sm);
   color: var(--color-lightsteelblue-200);
+  
 }
 .alltutorials {
   position: absolute;
   top: 476px;
   left: 87px;
-  width: 100%;
-  height: 341px;
+  width: 85%;
+  height: 370px;
   display: flex;
   align-content: space-evenly;
   max-width: 100%;
@@ -158,7 +159,31 @@
   font-size: var(--font-size-smi);
   color: var(--color-darkgray);
   font-family: var(--font-pt-sans);
+
+  /*Max-height and overflow r the css for the scroll bar*/
+  max-height: 500px;
+  overflow-y: hidden;
 }
+
+.alltutorials2 {
+  position: absolute;
+  top: 476px;
+  left: 87px;
+  width: 85%;
+  height: 370px;
+  display: flex;
+  align-content: space-evenly;
+  max-width: 100%;
+  justify-content: space-between;
+  text-align: center;
+  font-size: var(--font-size-smi);
+  color: var(--color-darkgray);
+  font-family: var(--font-pt-sans);
+
+  /*Max-height and overflow r the css for the scroll bar*/
+ 
+}
+
 .items,
 .mytutorialsL {
   width: 100%;
