--- a/frontend/src/pages/LogInL.module.css
+++ b/frontend/src/pages/LogInL.module.css
@@ -38,7 +38,7 @@
 }
 .items {
   height: 1026px;
-  background-image: url(/public/items@3x.png);
+  background-image: url(/public/-log-in@3x.png);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: top;
