--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -30,6 +30,12 @@ body {
   --font-size-smi: 13px;
   --font-size-7xl: 26px;
 
+  --font-size-6xs: 7px;
+  --font-size-11xl: 30px;
+  --font-size-lgi: 19px;
+  --font-size-13xl: 32px;
+  --font-size-3xl: 22px;
+
   /* Colors */
   --color-gray-100: #2e2b43;
   --color-gray-200: #242136;
@@ -61,6 +67,12 @@ body {
   /* Gaps */
   --gap-31xl: 50px;
   --gap-smi: 13px;
+  --gap-2xl: 21px;
+  --gap-9xs: 4px;
+  --gap-3xs: 10px;
+  --gap-5xs: 8px;
+  --gap-490xl: 509px;
+  --gap-base: 16px;
 
   /* Paddings */
   --padding-6xs: 7px;
@@ -69,6 +81,15 @@ body {
   --padding-7xs: 6px;
   --padding-2xl: 21px;
   --padding-9xs: 4px;
+  --padding-45xl: 64px;
+  --padding-7xs: 6px;
+  
+  --padding-sm: 14px;
+  --padding-xl: 20px;
+  --padding-9xl: 28px;
+  --padding-11xs: 2px;
+  --padding-5xl: 24px;
+  --padding-5xs: 8px;
 
   /* Border radiuses */
   --br-6xs: 7px;
