--- a/frontend/src/pages/SignInDL.module.css
+++ b/frontend/src/pages/SignInDL.module.css
@@ -16,7 +16,7 @@
   width: 100%;
   height: 1024px;
   overflow: hidden;
-  background-image: url(/public/-log-in1@3x.png);
+  background-image: url(/public/-log-in@3x.png);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: top;
