--- a/frontend/src/components/Property1Closed.module.css
+++ b/frontend/src/components/Property1Closed.module.css
@@ -1,5 +1,5 @@
 .fiBrMenuBurgerIcon {
-  position: absolute;
+  position: fixed;
   top: 23px;
   left: 27px;
   width: 24px;
@@ -109,7 +109,7 @@
   cursor: pointer;
 }
 .frameParent {
-  position: absolute;
+  position: fixed;
   top: 102px;
   left: 20px;
   width: 36px;
@@ -120,4 +120,5 @@
   width: 79px;
   height: 927px;
   overflow: hidden;
+  position: absolute;
 }
