--- a/frontend/src/pages/MytutorialsL.module.css
+++ b/frontend/src/pages/MytutorialsL.module.css
@@ -19,6 +19,7 @@
 }
 .allTutorials,
 .continueTheJourney {
+  overflow: hidden;
   position: absolute;
   top: 37px;
   left: 87px;
@@ -180,13 +181,14 @@
   color: var(--color-darkgray);
   font-family: var(--font-pt-sans);
 
-  /*Max-height and overflow r the css for the scroll bar*/
  
 }
 
 .items,
 .mytutorialsL {
   width: 100%;
+  
+  position: absolute;
   overflow: hidden;
 }
 .items {
@@ -200,7 +202,8 @@
   justify-content: space-between;
 }
 .mytutorialsL {
-  position: relative;
+  overflow: hidden;
+  position: absolute;
   background: linear-gradient(180.46deg, #251849, #251849 0.01%, #18113b);
   height: 1075px;
   text-align: left;
