--- a/frontend/src/pages/Dashboard.module.css
+++ b/frontend/src/pages/Dashboard.module.css
@@ -26,7 +26,7 @@
   height: 831px;
   display: flex;
 }
-.dashboardL {
+.dashboard {
   position: relative;
   background: linear-gradient(180.46deg, #251849, #251849 0.01%, #18113b);
   width: 100%;
@@ -37,6 +37,6 @@
   color: var(--color-white);
   font-family: var(--font-righteous);
 }
-.dashboardL:hover {
+.dashboard:hover {
   filter: drop-shadow(0 4px 4px 5px rgba(104, 63, 234, 0.25));
 }
