--- a/frontend/src/pages/SignIn.module.css
+++ b/frontend/src/pages/SignIn.module.css
@@ -78,7 +78,7 @@
   font-size: var(--font-size-lgi);
 }
 .logIn,
-.signInL {
+.signIn {
   width: 100%;
   height: 1024px;
   display: flex;
@@ -94,7 +94,7 @@
   background-repeat: no-repeat;
   background-position: top;
 }
-.signInL {
+.signIn {
   position: relative;
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
   overflow-x: auto;
