--- a/frontend/src/pages/Home.module.css
+++ b/frontend/src/pages/Home.module.css
@@ -715,7 +715,7 @@ border-radius: 17px;
   height: 48px;
 }
 .footer,
-.homePageL {
+.Home {
   width: 100%;
   display: flex;
   max-width: 100%;
@@ -732,7 +732,7 @@ border-radius: 17px;
   align-content: space-between;
   font-size: var(--font-size-base);
 }
-.homePageL {
+.Home {
   position: relative;
   background: radial-gradient(
     50% 50%at 50% 50%,
