--- a/frontend/src/components/FilteredFormCard.module.css
+++ b/frontend/src/components/FilteredFormCard.module.css
@@ -102,8 +102,8 @@
 }
 .continuejourneycards {
   position: absolute;
-  top: 100px;
-  left: 87px;
+  top: 80px;
+  /* left: 87px; */
   width: 100%;
   height: 240px;
   display: flex;
