--- a/frontend/src/components/ProjectFrame.module.css
+++ b/frontend/src/components/ProjectFrame.module.css
@@ -8,7 +8,7 @@
   top: 14px;
   font-size: var(--font-size-sm);
   color: var(--color-white);
-}
+}   
 .projectbox {
   top: 8px;
   left: 14px;
@@ -46,7 +46,9 @@
   font-size: var(--font-size-xs);
   color: var(--color-lightslategray);
   font-family: var(--font-poppins);
+  position: relative;
 }
+
 .projectframe:hover {
   border-left: 3px solid;
   border-left-color: #2d2360;
