--- a/frontend/src/pages/GenericTutorial.module.css
+++ b/frontend/src/pages/GenericTutorial.module.css
@@ -38,7 +38,7 @@
   align-content: space-between;
   max-width: 100%;
 }
-.generictutorialpageL {
+.GenericTutorial {
   position: relative;
   background: linear-gradient(180.46deg, #251849, #251849 0.01%, #18113b);
   width: 100%;
@@ -49,6 +49,6 @@
   color: var(--color-white);
   font-family: var(--font-poppins);
 }
-.generictutorialpageL:hover {
+.GenericTutorial:hover {
   filter: drop-shadow(0 4px 4px 5px rgba(104, 63, 234, 0.25));
 }
