--- a/frontend/src/pages/Profile.module.css
+++ b/frontend/src/pages/Profile.module.css
@@ -132,7 +132,7 @@
   border-radius: var(--br-xl);
 }
 .frameParent,
-.userProfilePageLInner {
+.ProfileInner {
   position: absolute;
   width: 100%;
   display: flex;
@@ -147,7 +147,7 @@
   justify-content: stretch;
   max-width: 100%;
 }
-.userProfilePageLInner {
+.ProfileInner {
   top: 1px;
   left: 62px;
   background-color: var(--color-midnightblue);
@@ -452,7 +452,7 @@
   font-size: 40px;
   font-family: var(--font-righteous);
 }
-.userProfilePageL {
+.Profile {
   position: relative;
   background: linear-gradient(180.46deg, #251849, #251849 0.01%, #18113b);
   width: 100%;
@@ -463,6 +463,6 @@
   color: var(--color-white);
   font-family: var(--font-press-start-2p);
 }
-.userProfilePageL:hover {
+.Profile:hover {
   filter: drop-shadow(0 4px 4px 5px rgba(104, 63, 234, 0.25));
 }
