--- a/frontend/src/pages/Tutorials.module.css
+++ b/frontend/src/pages/Tutorials.module.css
@@ -187,7 +187,7 @@
 }
 
 .items,
-.mytutorialsL {
+.Tutorials {
   width: 100%;
   position: absolute;
   overflow: hidden;
@@ -201,8 +201,9 @@
   align-content: stretch;
   max-width: 100%;
   justify-content: space-between;
+  padding-left: 90px;
 }
-.mytutorialsL {
+.Tutorials {
   overflow: hidden;
   position: absolute;
   background: linear-gradient(180.46deg, #251849, #251849 0.01%, #18113b);
@@ -212,6 +213,6 @@
   color: var(--color-white);
   font-family: var(--font-poppins);
 }
-.mytutorialsL:hover {
+.Tutorials:hover {
   filter: drop-shadow(0 4px 4px 5px rgba(104, 63, 234, 0.25));
 }
