--- a/frontend/src/components/FilteredFormCard.module.css
+++ b/frontend/src/components/FilteredFormCard.module.css
@@ -108,6 +108,7 @@
   height: 240px;
   display: flex;
   margin: 0;
+  margin-top:20px;
   justify-self: stretch;
   text-align: left;
   font-size: var(--font-size-xs);
