--- a/frontend/src/components/FileNavigationContainer.module.css
+++ b/frontend/src/components/FileNavigationContainer.module.css
@@ -116,6 +116,7 @@
   position: absolute;
   top: 35px;
   left: 26px;
+  right: 30px;
   width: 20px;
   height: 20px;
   background-image: url(/public/image-14@3x.png);
@@ -126,7 +127,8 @@
 .navigation {
   position: absolute;
   top: 0;
-  left: 0;
+  left: 50px;
+  right: 30px;
   background: linear-gradient(#160f3a, #160f3a), rgba(51, 51, 51, 0.8);
   backdrop-filter: blur(50px);
   width: 211px;
