--- a/frontend/src/components/LoginForm.module.css
+++ b/frontend/src/components/LoginForm.module.css
@@ -162,9 +162,12 @@
   line-height: 6px;
   width: 198px;
   height: 17px;
+  color: white;
+  transition: color 0.3s;
+  cursor: pointer;
 }
-.logInUsing:hover {
-  color: var(--color-white);
+.logInUsing:hover, .logInUsing:active {
+  color: blue;
 }
 .logInUsing:active {
   mix-blend-mode: lighten;
@@ -206,6 +209,12 @@
   justify-content: center;
   width: 228px;
   height: 16px;
+  color: white;
+  transition: color 0.3s;
+  cursor: pointer;
+}
+.logInUsing1:hover, .logInUsing1:active{
+  color: blue;
 }
 .facebookicon {
   position: absolute;
