--- a/frontend/src/components/SignUpCardForm.module.css
+++ b/frontend/src/components/SignUpCardForm.module.css
@@ -75,3 +75,29 @@
   font-size: var(--font-size-11xl);
   color: var(--color-white);
 }
+
+.button {
+  top: 676px;
+  left: 954px;
+  border-radius: 29.45px;
+  background: radial-gradient(50% 50%at 50% 50%, #a27cf3, #683fea);
+  box-shadow: 0 0 180px #9917ff, 0 0 1px 4px rgba(255, 255, 255, 0.1),
+    0-4px 2px rgba(0, 0, 0, 0.25) inset,
+    0 2px 1px rgba(255, 255, 255, 0.25) inset;
+  width: 285px;
+  overflow: hidden;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  padding: var(--padding-smi) var(--padding-45xl);
+  box-sizing: border-box;
+  cursor: pointer;
+  font-size: var(--font-size-lgi);
+  font-weight: 600;
+}
+.text {
+  flex: 1;
+  position: relative;
+  font-weight: 600;
+}
