--- a/frontend/src/components/SignUpCardForm.module.css
+++ b/frontend/src/components/SignUpCardForm.module.css
@@ -7,7 +7,7 @@
   align-items: center;
   justify-content: center;
   width: 415px;
-  height: 70px;
+  height: 20px;
 }
 .frame {
   align-self: stretch;
@@ -21,13 +21,18 @@
   border: 0;
   background-color: transparent;
   position: absolute;
-  top: 0;
+  top: 60px;
   left: 216px;
   font-family: var(--font-poppins);
   font-size: var(--font-size-base);
 }
 .frame3 {
-  left: 0;
+  left: 7px;
+  width: 190px;
+}
+.frame2{
+  right:20px;
+  width: 190px;
 }
 .frame1 {
   align-self: stretch;
@@ -35,34 +40,42 @@
   border-radius: var(--br-3xs);
   height: 49px;
 }
-.frame4,
-.frame5 {
+.email{
+  width: 400px;
   border: 0;
+  top:40px;
+  font-family: var(--font-poppins);
   background-color: transparent;
   position: relative;
   font-size: var(--font-size-base);
   color: var(--color-white);
 }
-.frame4 {
-  font-family: var(--font-poppins);
-}
-.frame5 {
-  align-self: stretch;
-}
 .frame5,
-.frame6,
+.password,
 .signupform {
   font-family: var(--font-poppins);
 }
-.frame6 {
+.password {
   border: 0;
+  top:50px;
+  width: 400px;
+  background-color: transparent;
+  align-self: stretch;
+  position: relative;
+  font-size: var(--font-size-base);
+}
+
+.confirmPassword {
+  border: 0;
+  top:60px;
+  width: 400px;
   background-color: transparent;
   align-self: stretch;
   position: relative;
   font-size: var(--font-size-base);
 }
 .signupform {
-  position: absolute;
+  position: relative;
   top: 224px;
   left: 889px;
   width: 415px;
@@ -75,10 +88,15 @@
   font-size: var(--font-size-11xl);
   color: var(--color-white);
 }
-
+.Google{
+  top: 90px;
+  left:30px;
+  position: relative;
+}
 .button {
-  top: 676px;
-  left: 954px;
+  position: absolute;
+  top: 460px;
+  left: 65px;
   border-radius: 29.45px;
   background: radial-gradient(50% 50%at 50% 50%, #a27cf3, #683fea);
   box-shadow: 0 0 180px #9917ff, 0 0 1px 4px rgba(255, 255, 255, 0.1),
@@ -94,10 +112,30 @@
   box-sizing: border-box;
   cursor: pointer;
   font-size: var(--font-size-lgi);
-  font-weight: 600;
 }
 .text {
   flex: 1;
   position: relative;
+  font-weight: 800;
+}
+input:-webkit-autofill {
+  -webkit-box-shadow: 0 0 0 100px #412e81 inset !important;
+}
+
+.joinVoop{
+  position: absolute;
+  font-size: var(--font-size-mini);
+  line-height: 6px;
+  font-family: var(--font-poppins);
+  color: var(--color-white);
+  text-align: center;
+  top:420px;
+  left:75px;
+  font-weight: 600;
+}
+
+.loginLink {
+  color:#f9ae68 ;
+  cursor:pointer;
   font-weight: 600;
 }
