--- a/frontend/src/components/DashbordCardJavaRP.module.css
+++ b/frontend/src/components/DashbordCardJavaRP.module.css
@@ -76,7 +76,7 @@
 .javaRecentprojects {
   position: absolute;
   top: 48px;
-  left: 0;
+  left: 100px;
   border-radius: var(--br-3xs);
   width: 300px;
   height: 236px;
