--- a/frontend/src/components/FilteredFormCard.module.css
+++ b/frontend/src/components/FilteredFormCard.module.css
@@ -101,19 +101,21 @@
   opacity: 1;
 }
 .continuejourneycards {
-  position: absolute;
-  top: 80px;
-  /* left: 87px; */
+  overflow-y: auto;
+  position: relative;
+  /* padding-top: 20px; */
+  top: 70px;
   width: 100%;
-  height: 240px;
+  height: 290px;
   display: flex;
-  margin: 0;
-  margin-top:20px;
+  /* margin: 0; */
+  /* margin-top: 20px; */
   justify-self: stretch;
   text-align: left;
   font-size: var(--font-size-xs);
   color: var(--color-white);
   font-family: var(--font-poppins);
+  
 }
 .continuejourneycards:hover {
   display: flex;
