--- a/frontend/src/pages/Dashboard.module.css
+++ b/frontend/src/pages/Dashboard.module.css
@@ -162,12 +162,17 @@
 }
 .newproject {
   top: 46px;
-  left: 1050px;
+  left: 0px;
   border-radius: var(--br-4xs) var(--br-4xs) 0 0;
   background-color: var(--color-midnightblue-400);
-  width: 320px;
+  width: 300px;
   height: 236px;
   font-size: var(--font-size-mini);
+}
+
+.newproject:hover {
+  background: #5551ff; /* Set the background color on hover to #5551ff */
+  /* Add any other styles you want for the hover effect */
 }
 .recentprojects {
   position: absolute;
