--- a/frontend/src/components/AnimationContainer.module.css
+++ b/frontend/src/components/AnimationContainer.module.css
@@ -1,16 +1,66 @@
-.animation1 {
-  position: relative;
-  font-weight: 500;
-}
-.file,
-.files {
+.animation,
+.frame,
+.vectorIcon,
+.vectorIcon1 {
   position: absolute;
-  top: 0;
   left: 0;
-  width: 121px;
+  height: 670px;
+  overflow: hidden;
+
 }
-.file {
+.animation {
+top:10px;
+  right: 13px;
+  height:2500px;
+  background: linear-gradient(180deg, #18113c, #18113e);
+  border-left: 0.2px solid var(--color-gainsboro);
+  box-sizing: border-box;
+}
+.frame,
+.vectorIcon,
+.vectorIcon1 {
+  top: 38.4px;
+  width: 615px;
+}
+.vectorIcon,
+.vectorIcon1 {
+  height: 100%;
+  right: 0;
+  bottom: 0;
+  max-width: 100%;
+  max-height: 100%;
+}
+.vectorIcon1 {
+  height: 83.5%;
+  width: 66.5%;
+  top: 8.5%;
+  right: 17%;
+  bottom: 8%;
+  left: 16.5%;
+}
+.js {
+  position: absolute;
+  top: 49%;
+  left: 25%;
+  line-height: 8px;
+}
+.icon {
+  position: relative;
+  width: 20px;
+  height: 20px;
+  overflow: hidden;
+  flex-shrink: 0;
+}
+.animation2 {
+  position: relative;
+  font-size: var(--font-size-sm);
+  font-weight: 500;
+  font-family: var(--font-poppins);
+  color: var(--white-transparent-80);
+}
+.animation1 {
   background-color: var(--white-transparent-10);
+  width: 121px;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -19,102 +69,150 @@
   box-sizing: border-box;
   gap: var(--gap-9xs);
 }
-.files {
-  border-radius: 0 var(--br-5xs) 0 0;
-  background-color: var(--color-gray-100);
-  height: 32px;
-}
-.icInfoOutline48pxIcon,
-.icLoop48pxIcon,
-.icReplay48pxIcon {
+.frameChild {
   position: relative;
-  width: 20px;
-  height: 20px;
-  object-fit: cover;
+  border-radius: 50%;
+  background-color: var(--color-mediumseagreen);
+  width: 19.5px;
+  height: 19.5px;
+  z-index: 0;
 }
-.icInfoOutline48pxIcon,
-.icReplay48pxIcon {
-  width: 18.1px;
+.editPlus {
+  position: absolute;
+  margin: 0 !important;
+  top: 2.3px;
+  left: 2.3px;
+  width: 15.6px;
+  height: 15.6px;
   overflow: hidden;
   flex-shrink: 0;
+  z-index: 1;
 }
-.icInfoOutline48pxIcon {
-  width: 20px;
+.ellipseParent {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: flex-start;
+  position: relative;
+  gap: var(--gap-5xs-8);
+  cursor: pointer;
 }
-.groupChild,
-.objectify {
+.frameItem {
+  position: relative;
+  border-radius: 50%;
+  background-color: var(--color-indianred);
+  width: 19.2px;
+  height: 19.2px;
+}
+.ellipseWrapper {
   position: absolute;
-  top: 3px;
-  left: 16px;
-}
-.groupChild {
   top: 0;
   left: 0;
-  border-radius: var(--br-7xs);
-  background-color: var(--color-gainsboro);
-  border: 1px solid var(--white-default);
-  box-sizing: border-box;
-  width: 85px;
-  height: 24px;
+  width: 19.2px;
+  height: 19.2px;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: flex-start;
 }
-.icPlayArrow48pxIcon {
+.editMinus {
   position: absolute;
-  top: 5px;
-  left: 66px;
-  width: 13px;
-  height: 13px;
+  top: 2.3px;
+  left: 2.3px;
+  width: 15.4px;
+  height: 15.4px;
   overflow: hidden;
-  object-fit: cover;
 }
-.objectifyParent {
+.frameParent {
   position: relative;
-  width: 85px;
-  height: 24px;
+  width: 19.2px;
+  height: 19.2px;
 }
-.icLoop48pxParent {
-  position: absolute;
-  top: 0;
-  right: 0;
-  background-color: var(--color-darkslategray-200);
+.undo {
+  position: relative;
+  font-size: var(--font-size-sm);
+  font-weight: 600;
+  font-family: var(--font-poppins);
+  color: var(--white-default);
+  text-align: center;
+}
+.undoButtonIcon {
+  position: relative;
+  width: 17.5px;
+  height: 17.5px;
+  overflow: hidden;
   flex-shrink: 0;
+}
+.explorebutton,
+.explorebutton1 {
+  cursor: pointer;
+  border: 0;
+  background-color: var(--color-darkorange);
+  border-radius: 5.33px;
+  box-shadow: 0 0 6.67px rgba(255, 255, 255, 0.5) inset;
+  height: 26px;
+  overflow: hidden;
+  flex-shrink: 0;
+  justify-content: center;
+  box-sizing: border-box;
+  padding: var(--padding-9xs) var(--padding-lg);
+  width: 88px;
   display: flex;
   flex-direction: row;
   align-items: center;
+  gap: var(--gap-6xs);
+}
+.explorebutton1 {
+  padding: var(--padding-9xs) var(--padding-sm);
+  width: 69px;
+}
+.explorebutton1,
+.saveButton,
+.topBarAnimation {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.saveButton {
   justify-content: stretch;
   padding: var(--padding-9xs) var(--padding-sm);
-  gap: var(--gap-2xl);
+  box-sizing: border-box;
+  gap: var(--gap-sm);
   align-content: stretch;
-  font-size: var(--font-size-xs);
-  color: var(--white-default);
-  font-family: var(--font-pt-sans);
 }
-.animationChild,
-.animationItem {
+.topBarAnimation {
   position: absolute;
-  top: 238.6px;
-  left: 172px;
-  width: 105.1px;
-  height: 278.3px;
-  object-fit: contain;
+  top: 0;
+  width:800px;
+
+  justify-content: flex-start;
+  gap: 280px;
+
 }
-.animationItem {
-  top: 239px;
-  left: 382px;
-  width: 59px;
-  height: 270px;
-  object-fit: cover;
-}
-.animation {
+.animationmain,
+.frame1 {
   position: absolute;
-  width: calc(100% - 759px);
-  top: calc(50% - 428.5px);
-  right: 759px;
-  left: 759px;
-  background: linear-gradient(180deg, #2e2360, #18113e);
-  height: 865px;
+  width: 800px;
+}
+.frame1 {
+  top: 9px;
+
+  height: 34px;
   overflow: hidden;
-  text-align: left;
-  font-size: var(--font-size-sm);
-  color: var(--white-transparent-80);
-  font-family: var(--font-poppins);
+  font-size: var(--font-size-6xs);
+  color: var(--black-transparent);
 }
+.animationmain {
+  left: 850px;
+  text-align: left;
+  font-size: var(--font-size-xs);
+  color: var(--color-gray-400);
+  font-family: var(--font-roboto);
+}
+
+.frame{
+  top:-10px;
+  width: 900px;
+  height: 900px;
+}
+
