--- a/frontend/src/components/OutputContainer.module.css
+++ b/frontend/src/components/OutputContainer.module.css
@@ -4,13 +4,13 @@
 }
 .file {
   left: 0;
-  background-color: var(--white-transparent-10);
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
   padding: var(--padding-7xs) var(--padding-base);
   gap: var(--gap-9xs);
+  background-color: var(--white-transparent-10);
 }
 .code,
 .file,
@@ -27,9 +27,11 @@
   justify-content: center;
   padding: var(--padding-7xs) var(--padding-base);
   gap: var(--gap-9xs);
+  background-color: #201B3A;
 }
 .code,
 .files {
+
   left: 0;
   background-color: var(--color-gray-400);
   width: 548px;
@@ -60,6 +62,9 @@
   align-items: center;
   justify-content: space-between;
 }
+.topbarFiles {
+  background-color: #201B3A;
+}
 .frameChild {
   align-self: stretch;
   height: 99px;
@@ -70,14 +75,13 @@
 .main {
   position: relative;
   left: 0;
-  background-color: var(--color-gray-500);
 }
 .frameParent {
   top: 643px;
   border-top: 2px solid var(--color-darkslategray-300);
   box-sizing: border-box;
   width: 548px;
-  height: 170px;
+  height: 220px;
   overflow: hidden;
   display: flex;
   flex-direction: column;
@@ -87,18 +91,99 @@
   gap: var(--gap-3xs);
   font-size: var(--font-size-base);
   color: var(--color-lightslategray);
+  background-color: #120C31;
 }
 /* Adjust your existing .main component styles */
 .main {
   position: relative; 
   width: 100%;
-  top: 0;
+  top: 8px;
   right: 0;
   height: 865px;
   text-align: left;
   font-size: var(--font-size-sm);
-  color: var(--white-transparent-80);
   font-family: var(--font-poppins);
 }
 
+.objectify {
+  position: relative;
+  font-size: 13.5px;
+  font-weight: 600;
+  font-family: var(--font-poppins);
+  color: var(--white-default);
+  text-align: center;
+}
+.icPlayArrow48pxIcon {
+  position: relative;
+  width: 15.4px;
+  height: 15.4px;
+  overflow: hidden;
+  flex-shrink: 0;
+}
+.explorebutton {
+  cursor: pointer;
+  border: 0;
+  padding: 4.3333330154418945px 15.166666030883789px;
+  background-color: var(--color-darkorange);
+  position: absolute;
+  top: 3.6px;
+  left: 420px;
+  border-radius: 5.78px;
+  box-shadow: 0 0 7.22px rgba(255, 255, 255, 0.5) inset;
+  width: 104.7px;
+  height: 26px;
+  overflow: hidden;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  box-sizing: border-box;
+  gap: 7.22px;
+}
+.vectorIcon,
+.vectorIcon1 {
+  position: absolute;
+  height: 100%;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  max-width: 100%;
+  overflow: hidden;
+  max-height: 100%;
+}
+.vectorIcon1 {
+  height:90.5%;
+  width: 75.5%;
+  top: 8.5%;
+  right: 17%;
+  bottom: 8%;
+  left: 16.5%;
+}
 
+.js {
+  position: absolute;
+  top: 49%;
+  left: 25%;
+  line-height: 8px;
+  font-size: xx-small;
+  color: black;
+}
+.icon,
+.mainjs {
+  position: relative;
+}
+.icon {
+  width: 20px;
+  height: 20px;
+  flex-shrink: 0;
+}
+.mainjs {
+  font-size: var(--font-size-sm);
+  font-weight: 500;
+  font-family: var(--font-poppins);
+
+}
+.main{
+  left:90px;
+}
