--- a/frontend/src/components/AnimationContainer.module.css
+++ b/frontend/src/components/AnimationContainer.module.css
@@ -196,7 +196,6 @@ top:10px;
 }
 .frame1 {
   top: 9px;
-
   height: 34px;
   overflow: hidden;
   font-size: var(--font-size-6xs);
@@ -216,3 +215,29 @@ top:10px;
   height: 900px;
 }
 
+.defaultAnimationContainer{
+  top:0px;
+  width: 900px;
+  height: 900px;
+  left:850px;
+  position: relative;
+  /* top:10px;
+  right: 13px;
+  height:2500px;
+
+  left:850px;
+  text-align: left;
+  font-size: var(--font-size-xs);
+  color: var(--color-gray-400);
+  font-family: var(--font-roboto); */
+}
+
+.AnimationContainer{
+  top:-10px;
+  width: 900px;
+  height: 900px;
+  position: relative;
+
+  left: 750px;
+  
+}
